--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4693,7 +4693,7 @@ $sem^{(\Sigma,\cM)}_L(O)$ respectively.
 %%depending on a triple 
 %For a basic OMS $O$ in a language $L$ based on an institution $\I$ we define:
 %%$L=(lang,logic,ser)$ comprising of
-%%an OMS language, a logic (institute) and a serialization as follows:
+%%an OMS language, a logic (institution) and a serialization as follows:
 %$$sem_L(O) = ()$$
 %\semdom{sem_L(\syntax{BasicOMS})=(I, \Sigma,\Delta)}
 %%\mbox{
@@ -5002,7 +5002,7 @@ $\cM' = \{ M \in Mod(\Sigma') \mid M\forget\Sigma \in \cM \text{ and } M \forget
 %In the context of a global environment $\Gamma$,
 %the current language, logic and serialization $L$,  and a local environment $(\Sigma,\cM)$ (of previously declared
 %non-logical symbols), an OMS (\syntax{MinimizableOMS})
-%$O$ is interpreted as an institute $\cI=logic(\Gamma,L,O)$, a signature $\Sigma=sig(\Gamma,L,O)$ in institute $\cI$ and a class
+%$O$ is interpreted as an institution $\cI=logic(\Gamma,L,O)$, a signature $\Sigma=sig(\Gamma,L,O)$ in institution $\cI$ and a class
 %of models $\cM=Mod(\Gamma,L,O)$ over signature $\Sigma$.
 %We combine this into $sem(\Gamma,L,O)=(logic(\Gamma,L,O),sig(\Gamma,L,O),Mod(\Gamma,L,O))$.
 
@@ -5361,29 +5361,29 @@ $$sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi$$
 
 
 \semdom{sem(\syntax{LogicRef})=L}
-$L$ is the institute from the heterogeneous logical environment named by
+$L$ is the institution from the heterogeneous logical environment named by
 \syntax{LogicRef}.
 
 \semdom{sem(\Gamma,\syntax{OMSLangTrans})=\rho}
 $sem(\Gamma,\syntax{named-trans , OMSLangTransRef})=\rho$ where $\rho$ is
-the institute comorphism from the heterogeneous logical environment
+the institution comorphism from the heterogeneous logical environment
 named by \syntax{OMSLangTransRef}.  This is defined only if the
 domain of $\rho$ is the current logic of $\Gamma$.
 
 %$sem(L,\syntax{'qual-trans' , OMSLangTransRef } LR_1\ LR_2)=\rho$
-%where $\rho$ is the institute comorphism from the heterogeneous logical
+%where $\rho$ is the institution comorphism from the heterogeneous logical
 %environment named by \syntax{OMSLangTransRef}. This is defined
 %only if $\rho:sem(LR_1)\to sem(LR_2)$ and $L=sem(LR_1)$.
 
 \CLnote{We need some ``algorithm'' for handling \syntax{LolaRef}s that are actually \syntax{LanguageRef}s, not \syntax{LogicRef}s.  Suppose a translation lang1$\to$lang2 is referenced, let e(lang) be the logic that exactly captures the expressivity of lang.  For lang1$\to$lang2 there might be a ``language-side'' default translation, which does not have a corresponding ``logic-side'' mapping at all, or whose exactly corresponding ``logic-side'' mapping is not the default for e(lang1)$\to$e(lang2).}
 
 %$sem(L,\syntax{'anonymous-trans' } LR_1\ LR_2)=\rho$
-%where $\rho$ is the unique institute comorphism from the heterogeneous
+%where $\rho$ is the unique institution comorphism from the heterogeneous
 %logical environment running from $sem(LR_1)$ to $sem(LR_2)$.  This is
 %defined only if $L=sem(LR_1)$.
 
 $sem(L,\syntax{default-trans, LolaRef})=\rho$
-where $\rho$ is the unique institute comorphism from the heterogeneous
+where $\rho$ is the unique institution comorphism from the heterogeneous
 logical environment running from $L$ to $sem(\syntax{LolaRef})$.
 
 
@@ -5447,7 +5447,7 @@ logical environment running from $L$ to $sem(\syntax{LolaRef})$.
 %is undefined, if such a subsignature does not exist.)
 %
 %$sem(L,\Sigma,\syntax{'revealed' } (\syntax{'symbol-items' } EI_1\ldots EI_n))=(id,\Sigma')$\\
-%where $id$ is the identity institute morphism, and
+%where $id$ is the identity institution morphism, and
 %and $\Sigma'$ is the minimal subsignature of $\Sigma$
 %with $ent(\Sigma')$ containing $EI_1\ldots EI_n$.
 %(The semantics
@@ -5462,8 +5462,8 @@ logical environment running from $L$ to $sem(\syntax{LolaRef})$.
 %TODO
 %$\Phi(\Sigma)$
 %where $sem(L,\syntax{OMSLangTrans})$ is $(\Phi,\alpha,\beta)$.
-%\todonote{Here, we need to introduce institute morphisms and
-%require $\Phi(\Sigma)\leq\Sigma$ in the Grothendieck institute!}
+%\todonote{Here, we need to introduce institution morphisms and
+%require $\Phi(\Sigma)\leq\Sigma$ in the Grothendieck institution!}
 
 \semdom{sem(\Gamma,\syntax{MappingDefn})= \Gamma'}
 See equations for \syntax{IntprDefn},  \syntax{Entailment}, \syntax{EquivDefn}, \syntax{ModuleRelDefn} and \syntax{AlignDefn}.
@@ -5841,7 +5841,7 @@ from the correspondences and taking into account \syntax{AlignSem}.
 
 \sclause{OMS language translations}
 The concept of OMS language translation has been
-formalized as institute comorphism.
+formalized as institution comorphism.
 
 Provide some examples
 
@@ -5942,7 +5942,7 @@ e.g. imports, cannot be identified.}.  The OWL 2 Manchester syntax satisfies the
  conformance.
 ~\CLnote{also need conformance propositional logic; use PL ``profile'' of the CASL ``IFIP standard''}
 
-OWL can be formalized as an institute as follows:
+OWL can be formalized as an institution as follows:
 \begin{definition}\label{DL} \defsty{\OWL2 DL.} 
 \OWL~2~DL is the description logic (DL) based fragment of the web ontology language \OWL 2. 
 We start with the simple description logic $\ALC$, and then proceed
@@ -5999,7 +5999,7 @@ The semantic conformance of Common Logic (as specified in \nisref{ISO/IEC 24707:
 
 The XCF dialect of Common Logic has a serialization that satisfies the criteria for XML conformance.  The CLIF dialect of Common Logic has a serialization that satisfies the criteria for text conformance.
 
-Common Logic can be defined as an institute as follows:
+Common Logic can be defined as an institution as follows:
 
 \begin{definition}\label{CommonLogic} \defsty{Common Logic.}  
 A common logic signature
@@ -7064,7 +7064,7 @@ rules.
 
 \ssclause{$\Prop\rightarrow  \FOL^{ms =}$} 
 
-$\Prop\rightarrow \FOL^{ms =}$ is a subinstitute by mapping
+$\Prop\rightarrow \FOL^{ms =}$ is a subinstitution by mapping
 propositional variables to nullary predicates.
 
   \ssclause{$\OBOOWL \rightarrow SROIQ(D)$} 
@@ -7157,7 +7157,7 @@ $I_\rightarrow$ etc.\ over the natural numbers.
 
 \ssclause{$\Clogic \rightarrow \CASL$} 
 
-This institute comorphism specifies the theory of lists and the
+This institution comorphism specifies the theory of lists and the
 implicit components of \Clogic models explicitly in \CASL.
 
 \ssclause{$\CASL\rightarrow \HOL$} 
