--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -516,3 +516,39 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
   series =      "Monographs in Theoretical Computer Science. An EATCS Series",
   year =        "2012"
 }
+
+
+
+@inproceedings{DBLP:conf/owled/SchneiderRS13,
+  author    = {Michael Schneider and
+               Sebastian Rudolph and
+               Geoff Sutcliffe},
+  title     = {Modeling in {OWL} 2 without Restrictions},
+  booktitle = {Proceedings of the 10th International Workshop on {OWL:} Experiences
+               and Directions {(OWLED} 2013) co-located with 10th Extended Semantic
+               Web Conference {(ESWC} 2013), Montpellier, France, May 26-27, 2013.},
+  year      = {2013},
+  crossref  = {DBLP:conf/owled/2013},
+  url       = {http://ceur-ws.org/Vol-1080/owled2013_14.pdf},
+  timestamp = {Mon, 10 Nov 2014 13:58:50 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/owled/SchneiderRS13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/owled/2013,
+  editor    = {Mariano Rodriguez{-}Muro and
+               Simon Jupp and
+               Kavitha Srinivas},
+  title     = {Proceedings of the 10th International Workshop on {OWL:} Experiences
+               and Directions {(OWLED} 2013) co-located with 10th Extended Semantic
+               Web Conference {(ESWC} 2013), Montpellier, France, May 26-27, 2013},
+  series    = {{CEUR} Workshop Proceedings},
+  year      = {2013},
+  volume    = {1080},
+  publisher = {CEUR-WS.org},
+  url       = {http://ceur-ws.org/Vol-1080},
+  timestamp = {Mon, 10 Nov 2014 13:58:50 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/owled/2013},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
