--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -187,6 +187,16 @@ ZimmerEuze06,
   journal = {Journal of the Association for Computing Machinery 39, pp. 95--146, , 1992},
   year = 1992,
 }
+
+@InProceedings{weakcol,
+  author = {M. CODESCU and T. MOSSAKOWSKI},
+  title = {Heterogeneous colimits},
+  year = {2008},
+  editor = {F. Boulanger and C. Gaston and P.-Y. Schobbens},
+  booktitle = {MoVaH'08 Workshop on Modeling, Validation and Heterogeneity},
+  publisher = {IEEE press}
+}
+
 @article{inst-mor,
   author = {J. A. GOGUEN and G. ROSU},
   title = {Institution morphisms},
@@ -550,5 +560,25 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
   timestamp = {Mon, 10 Nov 2014 13:58:50 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/owled/2013},
   bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@InProceedings{OM2014,
+  author = {Mihai Codescu and Till Mossakowski and Oliver Kutz},
+  title = {A Categorical Approach to Ontology Alignment},
+  year = {2014},
+  booktitle = {Proc. of the 9th International Workshop on Ontology Matching (OM-2014), ISWC-2014, Riva del Garda, Trentino, Italy.},
+  series = {CEUR-WS online proceedings},
+  keywords = {ontology alignment semantics colimit},
+  pdfurl = {http://www.informatik.uni-bremen.de/~okutz/resources/om2014.pdf},
+  abstract = {Ontology matching and alignment is a key mechanism for linking
+the diverse datasets and ontologies arising in the Semantic Web. We show
+that category theory provides the powerful abstractions needed for a uniform
+treatment at various levels: semantics, language design, reasoning and tools.
+The Distributed Ontology Language DOL is extended in a natural way with
+constructs for networks of ontologies. We in particular show how the three
+semantics of Zimmermann and Euzenat can be uniformly and faithfully represented using these DOL language constructs. Finally, we summarise how
+the DOL alignment features are currently being implemented in the Ontohub/Hets ecosystem, including support for the OWL and Alignment APIs.},
+  status = {Reviewed}
 }
 
