--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -272,6 +272,10 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand*{\institutionsOnly}{\bfseries\itshape}
 % Font style for syntactic features
 \newcommand*{\syntax}[1]{\texttt{#1}}
+
+% Font for UML
+\newcommand{\uml}[1]{\textsf{#1}}
+
 % requirements (as per Annex H of ISO/IEC Directives, Part 2)
 \newcommand*{\notallowed}{\textbf{not allowed}\xspace}
 \newcommand*{\notrequired}{\textbf{not required}\xspace}
@@ -6760,6 +6764,106 @@ equivalence groups_equiv : implicit_group <-> { explicit_group hide e, inv }
 end
 
 \end{lstlisting}
+
+\ssclause{Model-driven development}
+
+We present as a small example in model-deriven development using UML,
+taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
+the design of a traditional automatic teller machine (ATM) connected
+to a bank. For simplicity, we only describe the handling of entering a
+card and a PIN with the ATM. After entering the card, one has three
+trials for entering the correct PIN (which is checked by the
+bank). After three unsuccessful trials the card is kept.
+
+\begin{figure}[!Ht]
+\centering
+\subfigure[Interaction\label{fig:interaction}]{%
+  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/scenario.png}%\\[-1.5ex]
+}
+\hspace*{0.5cm}
+\subfigure[Composite structure\label{fig:system}]{%
+  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/system.png}%\\[-1.5ex]
+}
+\\
+\subfigure[Protocol state machine\label{fig:psm}]{%
+  \includegraphics[trim=6 6 6 6,clip,scale=.65]{illustrations/uml/protocol.png}%\\[-1.5ex]
+}
+\hspace*{0.4cm}
+\subfigure[Interface\label{fig:class}]{%
+  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/interfaceWithOCL.png}%\\[-1.5ex]
+}
+\\
+\subfigure[State machine\label{fig:state-machine}]{%
+  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/atm-behaviour.png}%\\[-1.5ex]
+}
+\vspace*{-1.5ex}
+\caption{ATM example}\label{fig:atm-example}
+\end{figure}
+
+Figure~\ref{fig:interaction} shows a possible \emph{interaction}
+between an \uml{atm} and a \uml{bank} object, which consists out of
+four messages: the \uml{atm} requests the \uml{bank} to \uml{verify}
+if a card and PIN number combination is valid, in the first case the
+\uml{bank} requests to reenter the PIN, in the second case the
+verification is successful.  This interaction presumes that the system
+has an \uml{atm} and a \uml{bank} as objects. This can, e.g., be
+ensured by a \emph{composite structure diagram}, see
+Fig.~\ref{fig:system}, which --- among other things --- specifies the
+objects in the initial system state.  Furthermore, it specifies that
+the communication between \uml{atm} and \uml{bank} goes through the
+two ports \uml{bankCom} and \uml{atmCom} linked by a connector.  The
+communication protocol on this connector is captured with a
+\emph{protocol state machine}, see Fig.~\ref{fig:psm}.  The protocol
+state machine fixes in which order the messages \uml{verify},
+\uml{verified}, \uml{reenterPIN}, and \uml{markInvalid} between
+\uml{atm} and \uml{bank} may occur.  Figure~\ref{fig:class} provides
+structural information in form of an interface specifying what is
+provided at the \uml{userCom} port of the \uml{atm} instance. An
+interface is a set of operations that other model elements have to
+implement. In our case, the interface is described in a \emph{class
+  diagram}. Here, the operation \uml{keepCard} is enriched with the
+OCL constraint \uml{trialsNum >= 3}, which refines its semantics:
+\uml{keepCard} can only be invoked if the OCL constraints holds.
+
+Finally, the dynamic behaviour of the \uml{atm} object is specified by
+the \emph{behavioural state machine} shown in
+Fig.~\ref{fig:state-machine}. The machine consists of five states
+including \uml{Idle}, \uml{CardEntered}, etc.  Beginning in the
+initial \uml{Idle} state, the user can \emph{trigger} a state change
+by entering the \uml{card}. This has the \emph{effect} that the
+parameter \uml{c} from the \uml{card} event is assigned to the
+\uml{cardId} in the \uml{atm} object (parameter names are not shown on
+triggers). Entering a \uml{PIN} triggers another transition to
+\uml{PINEntered}.  Then the ATM requests verification from the bank
+using its \uml{bankCom} port.  The transition to \uml{Verifying} uses
+a \emph{completion event}: No explicit trigger is declared and the
+machine autonomously creates such an event whenever a state is
+completed, i.e., all internal activities of the state are finished (in
+our example there are no such activities).  If the interaction with
+the bank results in \uml{reenterPIN}, and the \emph{guard}
+\uml{trialsNum < 3} is true, the user can again enter a \uml{PIN}.
+
+We can now state the fact that the state machine of the
+\uml{atm}, shown in Fig.~\ref{fig:state-machine}, is a refinement of
+the protocol state machine in Fig.~\ref{fig:psm} as follows in DOL:
+
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,refinement},escapechar=@,mathescape]
+%prefix( :     <http://www.example.org/uml#>
+         uml   <http://www.uml.org/>
+         log   <http://purl.net/dol/@logic@/> %% descriptions of logics ...
+
+logic log:uml
+
+refinement abstract_to_concrete_atm =
+  psm refined to { atm with Idle |-> Idle, CardEntered |-> Idle, PINEntered |-> Idle, 
+                   Verified |-> Idle, Verifying |-> Verifying hide card, PIN                   }
+end
+\end{lstlisting}
+
+The refinement uses an abstraction of the \uml{atm}, expressed by the
+translation via symbol map \texttt{Idle |-> Idle, CardEntered |-> Idle, PINEntered |-> Idle, Verified |-> Idle, Verifying |-> Verifying}, resulting in two state only. Moreover, some detail of the \uml{atm} is hidden using
+\syntax{hide}. Then, the protocol state machine can be refined to
+the thus abstracted \uml{atm}.
 
 \infannex{Use cases}\label{a:use-cases}
 
