--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -26,7 +26,7 @@
 % Real PDF comments, or "paper" margin notes (using todonotes package)?
 \newif\ifpdfcomment
 %\pdfcommenttrue
-\pdfcommentfalse
+\pdfcommenttrue
 
 \documentclass[10pt,%
 \ifpretendfinal
@@ -37,6 +37,8 @@ draft%
 %final,
 ]{scrreprt}
 
+%\usepackage[show]{ed}
+\usepackage[hide]{ed}
 
 %color highlight, for editing
 \usepackage{color}
@@ -216,7 +218,7 @@ author=,date=,id=,replyto=,type=}{}%
 % \usepackage[obeyDraft,textsize=tiny]{todonotes} % must load after tikz
 
 %FN I commented the above out, because I could not get it to work, instead I include
-\usepackage[show]{ed} 
+ 
 
 
 
