corrected clause level

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6726,7 +6726,7 @@ end
 
 \end{lstlisting}
 
-\ssclause{Algebra}
+\sclause{Algebra}
 \ednote{use ``spec'' here???}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed},escapechar=@,mathescape]
@@ -6767,7 +6767,7 @@ end
 
 \end{lstlisting}
 
-\ssclause{Model-driven development}
+\sclause{Model-driven development}
 
 We present as a small example in model-deriven development using UML,
 taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
